--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           >Code 30 things in 30 days with CSS3</a
         >
       </div>
-      <div class="copyright">&copy;2018 Brightside Studios Inc.</div>
+      <div class="copyright">&copy;2022 Developed by Zahar</div>
     </footer>
   </body>
 </html>
